# sudoku

./: CMakeLists.txt  README.md  main.cpp
src/: main.cpp
src/assets/: assets.qrc
src/model/: SudokuModel.cpp  SudokuModel.h
src/presenter/: SudokuPresenter.cpp  SudokuPresenter.h
src/translations/: sudoku_fr.ts
src/view/: MainWindow.cpp  MainWindow.h  SudokuCellDelegate.cpp  SudokuCellDelegate.h
tests/: CMakeLists.txt
tests/model_tests/: tst_SudokuModel.cpp
